--- a/qtranslate_admin.css
+++ b/qtranslate_admin.css
@@ -1,14 +1,22 @@
 
 /* qtrans_adminHeader() */
 .qtrans_title_input { border:0pt none; font-size:1.7em; outline-color:invert; outline-style:none; outline-width:medium; padding:0pt; width:100%; }
+/*
 .qtrans_title {  display:  inline-block;  width:12%;}
 .qtrans_title_input2 { border:0pt none; font-size:1.7em; outline-color:invert; outline-style:none; outline-width:medium; padding:0pt; width:87%; margin-bottom: 5px; }
+*/
+.qtrans_title_input2 { display: inline-block; width:98%;}
+.qtrans_title_input2_wrap1 { width:99%; }
+.qtrans_title_input2_wrap2 { width:49%; }
+.qtrans_title_input2_wrap3 { width:33%; }
+.qtrans_title_input2_wrap { font-size:1.3em; line-height:1.3em;  text-align:center; display: inline-block; }
 .qtrans_title_wrap { border-color:#CCCCCC; border-style:solid; border-width:1px; padding:2px 3px; }
 #qtrans_textarea_content { padding:6px; border:0 none; line-height:150%; outline: none; margin:0pt; width:100%; -moz-box-sizing: border-box;
 						   -webkit-box-sizing: border-box; -khtml-box-sizing: border-box; box-sizing: border-box; }
 .qtrans_title { -moz-border-radius: 6px 6px 0 0;
 				-webkit-border-top-right-radius: 6px; -webkit-border-top-left-radius: 6px; -khtml-border-top-right-radius: 6px; -khtml-border-top-left-radius: 6px;
 				border-top-right-radius: 6px; border-top-left-radius: 6px; }
+
 .hide-if-no-js.wp-switch-editor.switch-tmce { margin-left:6px !important;}
 #qtranslate_debug { width:100%; height:200px }
 #postexcerpt textarea { height:4em; margin:0; width:98% }
