cleanup and rename mlpw->qtrans

--- a/qtranslate_admin.css
+++ b/qtranslate_admin.css
@@ -13,9 +13,6 @@
 .qtrans_title_wrap { border-color:#CCCCCC; border-style:solid; border-width:1px; padding:2px 3px; }
 #qtrans_textarea_content { padding:6px; border:0 none; line-height:150%; outline: none; margin:0pt; width:100%; -moz-box-sizing: border-box;
 						   -webkit-box-sizing: border-box; -khtml-box-sizing: border-box; box-sizing: border-box; }
-.qtrans_title { -moz-border-radius: 6px 6px 0 0;
-				-webkit-border-top-right-radius: 6px; -webkit-border-top-left-radius: 6px; -khtml-border-top-right-radius: 6px; -khtml-border-top-left-radius: 6px;
-				border-top-right-radius: 6px; border-top-left-radius: 6px; }
 
 .hide-if-no-js.wp-switch-editor.switch-tmce { margin-left:6px !important;}
 #qtranslate_debug { width:100%; height:200px }
@@ -43,39 +40,16 @@ p.error a{color:#c00;}
 
 
 /* multilingual-wp */
+#qtrans-tabs h2.nav-tab-wrapper { padding: 0; margin: 0px 0px 10px 0px; }
+#qtrans-tabs h2.nav-tab-wrapper a { float: right;font-size: 15px; line-height: 20px; }
+
 //body.js #titlediv, body.js #postdivrich { display: none; }
-//#mlwp-editors h2.nav-tab-wrapper { padding: 0; }
-//#mlwp-editors h2.nav-tab-wrapper a { float: right; }
-//#mlwp-editors h2.nav-tab-wrapper a.button { margin-left: 4px; height: 27px; line-height: 25px; }
-#mlwp-editors h2.nav-tab-wrapper { padding: 0; margin: 0px 0px 10px 0px; }
-#mlwp-editors h2.nav-tab-wrapper a { float: right;font-size: 15px; line-height: 20px; }//background-color: #eeeeee; }
-input.mlwp-title { padding: 3px 8px; font-size: 1.7em; line-height: 100%; width: 100%; outline: 0; }
 #poststuff { visibility:hidden; } // or post-body-content?
-
-/*
-#mlwp-editors .post-status-info {
-	border-color: #dfdfdf #ccc #ccc;
-	background-color: #eaeaea;
-	font-size: 12px;
-	border-width: 0 1px 1px;
-	border-style: none solid solid;
-	width: 100%;
-	-webkit-border-bottom-left-radius: 3px;
-	-webkit-border-bottom-right-radius: 3px;
-	border-bottom-left-radius: 3px;
-	border-bottom-right-radius: 3px;
-}
-#mlwp-editors .post-status-info td { font-size: 12px; }
-#mlwp-editors .post-status-info .wp-word-count { display: block; padding: 2px 10px; }
-#mlwp-editors.colors-classic .post-status-info { border-color: #d0dfe9 #d1e5ee #d1e5ee; background-color: none; }
-*/
-
 
 /*
 	Term edit styling
 */
 
-#mlwp-lang-tabs { padding-top: 10px; }
-#mlwp-lang-tabs #mlwp-languages-title { float: left; padding: 0 15px 10px 0; font-size: 20px; line-height: 25px; }
-//#mlwp-lang-tabs a.button { margin: 0 0 5px 4px; height: 27px; line-height: 25px; }
-tr.mlwp-lang-row th h3 { margin: 0; padding: 0 0 5px; border-bottom: 1px solid #ccc; }
+#qtrans-lang-tabs { padding-top: 10px; }
+#qtrans-lang-tabs #qtrans-languages-title { float: left; padding: 0 15px 10px 0; font-size: 20px; line-height: 25px; }
+tr.qtrans-lang-row th h3 { margin: 0; padding: 0 0 5px; border-bottom: 1px solid #ccc; }
